Enhance project structure and functionality by adding new components, updating existing ones, and improving localization support. Key changes include the addition of job application forms, error handling pages, and various UI components. Updated dependencies and configurations for better performance and maintainability.

--- a/.copilot-codeGeneration-instructions.md
+++ b/.copilot-codeGeneration-instructions.md
@@ -38,7 +38,7 @@ all styles must be in css file
 3. Add accessibility features (ARIA labels, keyboard navigation)
 4. Implement a floating "Back to Top" button
 5. Add page transitions and scroll animations
-
+6. Add all data into Pinia stores 
 ## SEO Optimization
 
 1. Setup meta tags and Open Graph properties
