--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -15,6 +15,27 @@
     "cta": "ابدأ الآن",
     "learnMore": "معرفة المزيد"
   },
+  "loading": {
+    "appTitle": "جاري تحميل ليب بي إم",
+    "message": "يرجى الانتظار بينما نقوم بإعداد كل شيء...",
+    "changingPage": "جاري تغيير الصفحة...",
+    "initializing": "تهيئة",
+    "loading": "تحميل",
+    "connecting": "اتصال",
+    "ready": "جاهز",
+    "hours": "ساعات",
+    "minutes": "دقائق",
+    "seconds": "ثواني",
+    "ms": "م.ث",
+    "maintenanceUpdates": "تقدم الصيانة",
+    "maintenanceLatest": "الأحدث",
+    "maintenanceUpdateServer": "تحسين الخادم",
+    "maintenanceUpdateServerMessage": "يتم حاليًا تحسين أداء قاعدة البيانات وموارد الخادم.",
+    "maintenanceUpdateBackup": "نسخ احتياطي للنظام",
+    "maintenanceUpdateBackupMessage": "اكتمل النسخ الاحتياطي الكامل للنظام قبل تنفيذ التغييرات.",
+    "maintenanceUpdateStart": "بدأت الصيانة",
+    "maintenanceUpdateStartMessage": "بدأت الصيانة المجدولة. نقدر صبرك."
+  },
   "home": {
     "title": "مرحبًا بك في ليب لإدارة المشاريع",
     "subtitle": "حلول إدارة المشاريع المتكاملة",
@@ -61,12 +82,15 @@
     "featureDescription": "هذا وصف للميزة وكيف تفيد المستخدم."
   },
   "clients": {
-    "title": "موثوق به من قبل الشركات الرائدة",
-    "subtitle": "نتعاون مع المؤسسات الرائدة في مختلف الصناعات لتقديم حلول استثنائية لإدارة المشاريع"
+    "title": "موثوق به من قبل رواد الصناعة",
+    "subtitle": "نتعاون مع المؤسسات الرائدة عبر مختلف الصناعات لتقديم حلول استثنائية لإدارة المشاريع",
+    "trusted": "يثق بنا"
   },
   "features": {
     "title": "مميزات قوية",
     "subtitle": "أدوات شاملة لإدارة مشاريعك بكفاءة",
+    "tagline": "لماذا تختارنا",
+    "learnMore": "معرفة المزيد",
     "feature1": {
       "title": "لوحة تحكم سهلة الاستخدام",
       "description": "احصل على نظرة عامة واضحة لمشاريعك مع لوحة التحكم سهلة الاستخدام"
@@ -78,6 +102,18 @@
     "feature3": {
       "title": "تحليلات متقدمة",
       "description": "تتبع التقدم واتخاذ قرارات مستندة إلى البيانات مع تقارير مفصلة"
+    },
+    "feature4": {
+      "title": "التسليم في الوقت المحدد",
+      "description": "نحن ندرك أهمية المواعيد النهائية في إدارة المشاريع. فريقنا ملتزم بتقديم نتائج عالية الجودة وفقًا للجدول الزمني."
+    },
+    "feature5": {
+      "title": "حلول مبتكرة",
+      "description": "نجلب التفكير الإبداعي والنهج المبتكر لكل مشروع، مما يساعد عملائنا على البقاء في المقدمة في سوق تنافسي."
+    },
+    "feature6": {
+      "title": "دعم على مدار الساعة",
+      "description": "فريق الدعم المخصص لدينا متاح على مدار الساعة لمعالجة أي مخاوف وتقديم المساعدة عندما تحتاجها."
     }
   },
   "about": {
@@ -91,6 +127,8 @@
     "ourStoryContent2": "تميزت رحلتنا بالالتزام بالابتكار والتميز ورضا العملاء. نجحنا في تنفيذ مئات المشاريع، وبناء علاقات طويلة الأمد مع العملاء الذين يثقون بنا لتحقيق رؤيتهم.",
     "established": "تأسست",
     "foundedYear": "2008",
+    "since": "منذ",
+    "imageCaption": "مقرنا الرئيسي في قلب الرياض",
     "discovery": "اكتشف",
     "whatWeDo": "ما نقدمه",
     "whatWeDoSubtitle": "نهجنا الشامل في إدارة المشاريع يضمن التنفيذ الناجح عبر جميع مراحل دورة حياة مشروعك.",
@@ -109,6 +147,7 @@
     "partnerships": "التعاون",
     "ourPartners": "شركاؤنا الموثوقون",
     "ourPartnersSubtitle": "نفخر بالتعاون مع الشركات الرائدة في الصناعة التي تشاركنا التزامنا بالتميز.",
+    "becomePartner": "كن شريكًا معنا",
     "tabs": {
       "company": "الشركة",
       "mission": "المهمة",
@@ -124,6 +163,32 @@
       "innovationContent": "الابتكار المستمر في نهجنا",
       "collaboration": "التعاون",
       "collaborationContent": "تعاون قوي مع العملاء والشركاء"
+    },
+    "timeline": {
+      "founded": "تأسست ليب بي إم برؤية لتغيير إدارة المشاريع في الشرق الأوسط",
+      "expansion": "توسعت العمليات في جميع أنحاء منطقة دول مجلس التعاون الخليجي مع مكاتب وشراكات جديدة",
+      "present": "تقود حالياً الابتكار في إدارة المشاريع عبر قطاعات متعددة"
+    },
+    "teamCredo": "فريقنا مكرس للتميز والابتكار وبناء شراكات دائمة مع عملائنا لتقديم نتائج مشاريع استثنائية.",
+    "joinOurTeam": "انضم إلى فريقنا",
+    "achievement": "حائز على جائزة",
+    "awardWinning": "التميز في إدارة المشاريع 2023",
+    "featuredPartners": "الشركاء المميزون",
+    "skills": {
+      "1": "إدارة المشاريع",
+      "2": "العمليات",
+      "3": "الخدمات التقنية",
+      "4": "خدمة العملاء",
+      "5": "القيادة",
+      "6": "الاستراتيجية",
+      "7": "المالية",
+      "8": "الهندسة"
+    },
+    "faq": {
+      "question1": "كيف يمكنني أن أصبح عميلاً؟",
+      "answer1": "تواصل مع فريقنا من خلال صفحة الاتصال لجدولة استشارة أولية حيث يمكننا مناقشة احتياجات مشروعك.",
+      "question2": "ما هي الصناعات التي تتخصصون فيها؟",
+      "answer2": "نحن متخصصون في قطاعات البناء والبنية التحتية والنقل والتكنولوجيا في جميع أنحاء منطقة الشرق الأوسط."
     }
   },
   "services": {
@@ -133,6 +198,13 @@
     "description": "نقدم مجموعة واسعة من الخدمات المتخصصة المصممة لتحسين تسليم مشروعك وضمان النجاح في كل مرحلة.",
     "viewAll": "عرض جميع الخدمات",
     "learnMore": "معرفة المزيد",
+    "contactUs": "اتصل بنا",
+    "tailoredSolutions": "حلول مخصصة لنجاح المشروع",
+    "introDescription1": "تقدم ليب بي إم مجموعة شاملة من خدمات إدارة المشاريع لضمان نجاح تسليم المشروع. يجلب فريقنا من المحترفين ذوي الخبرة الخبرة عبر مختلف الصناعات وأنواع المشاريع.",
+    "introDescription2": "نحن نفخر بتخصيص نهجنا لتلبية الاحتياجات المحددة لكل عميل، مما يضمن حلولاً تتماشى مع أهداف عملك ومتطلبات مشروعك.",
+    "getStarted": "ابدأ الآن",
+    "learnMoreAboutUs": "اعرف المزيد عنا",
+    "whatWeDo": "ما نقدمه",
     "projectControls": {
       "title": "ضوابط المشروع",
       "description": "إشراف شامل على المشروع بما في ذلك إدارة النطاق والجدول والتكلفة."
@@ -148,8 +220,7 @@
     "documentControl": {
       "title": "التحكم في المستندات",
       "description": "إدارة فعالة لوثائق المشروع وتدفق المعلومات."
-    },
-    "whatWeDo": "ما نقدمه"
+    }
   },
   "stats": {
     "title": "سجل إنجازاتنا",
@@ -160,33 +231,40 @@
     "countries": "دول نخدمها"
   },
   "testimonials": {
-    "testimonials": "آراء العملاء",
+    "testimonials": "الشهادات",
     "title": "ماذا يقول عملاؤنا",
     "subtitle": "اكتشف لماذا تختار المؤسسات الرائدة حلول إدارة المشاريع الخاصة بنا",
     "testimonial1": {
       "name": "جون ديفيس",
       "role": "مدير المشروع",
-      "company": "جلوبال كونستراكشن",
-      "content": "العمل مع ليب بي إم قد غير نهجنا في تسليم المشاريع. ساعدتنا خبرتهم وتفانيهم في التميز على إكمال المشاريع المعقدة قبل الجدول الزمني وبأقل من الميزانية."
+      "company": "شركة البناء العالمية",
+      "content": "العمل مع ليب للإدارة المشاريع حوّل نهجنا في تنفيذ المشاريع. خبرتهم وتفانيهم في التميز ساعدنا على إكمال مشاريع معقدة قبل الموعد المحدد وبميزانية أقل."
     },
     "testimonial2": {
       "name": "سارة كوبر",
       "role": "مدير العمليات",
-      "company": "تيك بيلد سوليوشنز",
-      "content": "قدم فريق ليب بي إم دعمًا لا يقدر بثمن طوال مشروع التوسع لدينا. كان اهتمامهم بالتفاصيل ونهجهم الاستباقي في حل المشكلات هو الفارق."
+      "company": "تك بيلد سوليوشنز",
+      "content": "قدم فريق ليب للإدارة المشاريع دعماً لا يقدر بثمن طوال مشروع التوسع لدينا. اهتمامهم بالتفاصيل ونهجهم الاستباقي في حل المشكلات أحدث كل الفرق."
     },
     "testimonial3": {
       "name": "أحمد رحمن",
       "role": "الرئيس التنفيذي",
-      "company": "إنوفيت إنجنيرز",
-      "content": "تعاوننا مع ليب بي إم في مشاريع متعددة على مدار السنوات الخمس الماضية. جعلتهم جودتهم المتسقة وموثوقيتهم جزءًا أساسيًا من نجاحنا."
+      "company": "المهندسون المبتكرون",
+      "content": "لقد تعاوننا مع ليب للإدارة المشاريع في مشاريع متعددة على مدار السنوات الخمس الماضية. جودتهم وموثوقيتهم المستمرة جعلتهم جزءًا أساسيًا من نجاحنا."
     },
     "testimonial4": {
       "name": "ماريا كوفاكس",
       "role": "مدير التطوير",
-      "company": "أوربان ليفينج بروبرتيز",
-      "content": "لقد حسن النهج الشامل لإدارة المشاريع من ليب بي إم عملية التطوير لدينا بشكل كبير. خبرة فريقهم لا مثيل لها في هذه الصناعة."
-    }
+      "company": "عقارات الحياة الحضرية",
+      "content": "نهج ليب للإدارة المشاريع الشامل في إدارة المشاريع حسن بشكل كبير عملية التطوير لدينا. خبرة فريقهم لا مثيل لها في الصناعة."
+    },
+    "highlights": {
+      "exceptional": "خدمة استثنائية",
+      "outstanding": "نتائج متميزة",
+      "professional": "مهنية عالية",
+      "communication": "تواصل ممتاز"
+    },
+    "viewMore": "عرض المزيد من الشهادات"
   },
   "blog": {
     "latestNews": "أحدث الأخبار",
@@ -237,6 +315,9 @@
     "name": "الاسم",
     "email": "البريد الإلكتروني",
     "phone": "رقم الهاتف",
+    "phoneCountry": "البلد",
+    "phoneFormatUsPlaceholder": "(555) 123-4567",
+    "phoneFormatInternationalPlaceholder": "123-456-7890",
     "subject": "الموضوع",
     "message": "الرسالة",
     "messagePlaceholder": "أخبرنا عن استفسارك أو قدم تفاصيل حول كيف يمكننا مساعدتك...",
@@ -372,14 +453,30 @@
       "firstName": "الاسم الأول",
       "lastName": "اسم العائلة",
       "email": "البريد الإلكتروني",
-      "phone": "الهاتف",
+      "phone": "رقم الهاتف",
       "resume": "السيرة الذاتية",
-      "dragFile": "اسحب ملفك هنا أو انقر للتصفح",
-      "supportedFormats": "التنسيقات المدعومة: PDF، DOC، DOCX (الحد الأقصى 5 ميجابايت)",
-      "coverLetter": "خطاب التغطية (اختياري)",
-      "coverLetterPlaceholder": "أخبرنا لماذا أنت مناسب لهذه الوظيفة",
-      "consent": "أوافق على معالجة ليب بي إم لبياناتي الشخصية لأغراض التوظيف. أفهم أنه سيتم التعامل مع معلوماتي وفقًا لسياسة الخصوصية الخاصة بالشركة.",
-      "submit": "تقديم طلب التوظيف"
+      "coverLetter": "خطاب تعريفي (اختياري)",
+      "coverLetterPlaceholder": "أخبرنا لماذا أنت مهتم بهذه الوظيفة ولماذا تعتقد أنك مناسب لها...",
+      "dragFile": "اسحب وأفلت الملف هنا أو انقر للتصفح",
+      "supportedFormats": "الصيغ المدعومة: PDF، DOC، DOCX (الحد الأقصى 5 ميجابايت)",
+      "consent": "أوافق على معالجة LEAP PM لبياناتي لأغراض التوظيف وأوافق على سياسة الخصوصية.",
+      "submit": "تقديم الطلب",
+      "submitting": "جاري التقديم...",
+      "errors": {
+        "title": "خطأ في النموذج",
+        "firstNameRequired": "الاسم الأول مطلوب",
+        "lastNameRequired": "اسم العائلة مطلوب",
+        "validEmail": "يرجى إدخال عنوان بريد إلكتروني صالح",
+        "validPhone": "يرجى إدخال رقم هاتف صالح",
+        "resumeRequired": "السيرة الذاتية مطلوبة",
+        "consentRequired": "يجب أن توافق على سياسة الخصوصية",
+        "formErrors": "يرجى تصحيح الأخطاء في النموذج قبل التقديم",
+        "submissionError": "حدث خطأ أثناء تقديم طلبك. يرجى المحاولة مرة أخرى."
+      },
+      "success": {
+        "title": "تم تقديم الطلب!",
+        "message": "شكرا لاهتمامك بالانضمام إلى فريقنا. لقد تلقينا طلبك وسنقوم بمراجعته قريبا. سنتواصل معك إذا كانت مؤهلاتك تتناسب مع احتياجاتنا."
+      }
     }
   },
   "footer": {
@@ -413,5 +510,162 @@
     "aboutUs": "عنا",
     "jobs": "الوظائف",
     "services": "الخدمات"
+  },
+  "legal": {
+    "lastUpdated": "آخر تحديث",
+    "backToTop": "العودة إلى الأعلى",
+    "tableOfContents": "جدول المحتويات",
+    "contact": {
+      "title": "أسئلة أو استفسارات؟",
+      "text": "إذا كان لديك أي أسئلة حول شروطنا أو سياسة الخصوصية، فلا تتردد في الاتصال بفريقنا القانوني.",
+      "button": "اتصل بنا"
+    },
+    "dataProtectionOfficer": "مسؤول حماية البيانات",
+    "dataProtectionText": "إذا كان لديك أي أسئلة حول كيفية معالجة بياناتك الشخصية أو كنت ترغب في ممارسة حقوقك، فيرجى الاتصال بمسؤول حماية البيانات لدينا.",
+    "faq": {
+      "title": "الأسئلة الشائعة"
+    },
+    "terms": {
+      "title": "الشروط والأحكام",
+      "subtitle": "يرجى قراءة هذه الشروط والأحكام بعناية قبل استخدام خدماتنا.",
+      "lastUpdatedDate": "1 يونيو 2023",
+      "toc": {
+        "acceptance": "قبول الشروط",
+        "services": "وصف الخدمات",
+        "account": "تسجيل الحساب والأمان",
+        "intellectual": "حقوق الملكية الفكرية",
+        "userContent": "محتوى المستخدم والسلوك",
+        "prohibited": "الأنشطة المحظورة",
+        "termination": "الإنهاء",
+        "disclaimer": "إخلاء المسؤولية عن الضمانات",
+        "limitation": "تحديد المسؤولية",
+        "indemnification": "التعويض",
+        "governing": "القانون الحاكم",
+        "changes": "التغييرات في الشروط",
+        "contact": "معلومات الاتصال"
+      },
+      "sections": {
+        "acceptance": "<p>من خلال الوصول إلى خدمات LEAP PM أو استخدامها، فإنك توافق على الالتزام بهذه الشروط والأحكام.</p>"
+      }
+    },
+    "privacy": {
+      "title": "سياسة الخصوصية",
+      "subtitle": "كيفية جمع معلوماتك الشخصية واستخدامها وحمايتها.",
+      "lastUpdatedDate": "1 يونيو 2023",
+      "alert": {
+        "title": "إشعار خصوصية هام",
+        "description": "توضح هذه السياسة كيفية جمع LEAP PM لمعلوماتك الشخصية واستخدامها ومشاركتها. يرجى قراءتها بعناية."
+      },
+      "intro": "في LEAP PM، نأخذ خصوصيتك على محمل الجد.",
+      "toc": {
+        "information": "المعلومات التي نجمعها",
+        "collection": "كيفية جمع المعلومات",
+        "use": "كيفية استخدام معلوماتك",
+        "sharing": "مشاركة معلوماتك",
+        "security": "أمن البيانات",
+        "thirdParty": "مواقع الطرف الثالث",
+        "children": "خصوصية الأطفال",
+        "international": "نقل البيانات الدولي",
+        "changes": "التغييرات في سياسة الخصوصية هذه",
+        "contact": "اتصل بنا"
+      },
+      "sections": {
+        "information": "<p>نجمع عدة أنواع من المعلومات من مستخدمي خدماتنا وعنهم.</p>"
+      },
+      "dataRights": {
+        "title": "حقوق حماية البيانات الخاصة بك",
+        "rights": {
+          "access": {
+            "title": "حق الوصول",
+            "description": "لديك الحق في طلب نسخ من بياناتك الشخصية."
+          },
+          "rectify": {
+            "title": "حق التصحيح",
+            "description": "لديك الحق في طلب تصحيح المعلومات غير الدقيقة عنك."
+          },
+          "delete": {
+            "title": "حق المحو",
+            "description": "لديك الحق في طلب حذف بياناتك الشخصية في ظروف معينة."
+          }
+        }
+      },
+      "cookiePolicy": {
+        "title": "سياسة ملفات تعريف الارتباط",
+        "required": "مطلوب",
+        "optional": "اختياري",
+        "manageText": "يمكنك إدارة تفضيلات ملفات تعريف الارتباط في أي وقت.",
+        "manageButton": "إدارة تفضيلات ملفات تعريف الارتباط",
+        "types": {
+          "essential": {
+            "title": "ملفات تعريف الارتباط الأساسية",
+            "description": "هذه الملفات ضرورية لكي يعمل الموقع بشكل صحيح ولا يمكن تعطيلها في أنظمتنا.",
+            "retention": "من الجلسة إلى سنة واحدة"
+          }
+        }
+      }
+    },
+    "errors": {
+      "notFound": {
+        "title": "الصفحة غير موجودة",
+        "heading": "الصفحة غير موجودة",
+        "description": "الصفحة التي تبحث عنها غير موجودة أو تمت إزالتها.",
+        "message": "عذراً، لم نتمكن من العثور على الصفحة التي تبحث عنها.",
+        "trySearching": "حاول البحث عن شيء آخر:",
+        "search": "بحث..."
+      },
+      "maintenance": {
+        "title": "الموقع قيد الصيانة",
+        "heading": "سنعود قريباً",
+        "description": "موقعنا الإلكتروني يخضع حالياً للصيانة المجدولة.",
+        "message": "نعتذر عن الإزعاج. يرجى التحقق مرة أخرى قريباً."
+      },
+      "error": {
+        "title": "حدث خطأ ما",
+        "heading": "عفواً! حدث خطأ ما.",
+        "description": "حدث خطأ أثناء معالجة طلبك.",
+        "message": "نأسف، ولكن حدث خطأ ما. يرجى المحاولة مرة أخرى لاحقاً."
+      },
+      "backToHome": "العودة إلى الصفحة الرئيسية",
+      "contactSupport": "الاتصال بالدعم",
+      "search": "بحث...",
+      "detailPages": {
+        "project": {
+          "title": "المشروع غير موجود",
+          "heading": "المشروع غير موجود",
+          "description": "المشروع الذي تبحث عنه غير موجود أو تمت إزالته.",
+          "message": "عذراً، لم نتمكن من العثور على المشروع الذي تبحث عنه."
+        },
+        "blog": {
+          "title": "المقال غير موجود",
+          "heading": "المقال غير موجود",
+          "description": "المقال الذي تبحث عنه غير موجود أو تمت إزالته.",
+          "message": "عذراً، لم نتمكن من العثور على المقال الذي تبحث عنه."
+        },
+        "job": {
+          "title": "الوظيفة غير موجودة",
+          "heading": "الوظيفة غير موجودة",
+          "description": "الوظيفة التي تبحث عنها غير موجودة أو تمت إزالتها.",
+          "message": "عذراً، لم نتمكن من العثور على الوظيفة التي تبحث عنها."
+        },
+        "service": {
+          "title": "الخدمة غير موجودة",
+          "heading": "الخدمة غير موجودة",
+          "description": "الخدمة التي تبحث عنها غير موجودة أو تمت إزالتها.",
+          "message": "عذراً، لم نتمكن من العثور على الخدمة التي تبحث عنها."
+        }
+      }
+    },
+    "error": {
+      "loading": "خطأ في تحميل المحتوى",
+      "tryAgain": "يرجى المحاولة مرة أخرى لاحقًا.",
+      "retry": "إعادة المحاولة",
+      "details": "تفاصيل الخطأ",
+      "refreshPage": "تحديث الصفحة",
+      "checkConnection": "التحقق من اتصال الإنترنت",
+      "tryAgainLater": "المحاولة مرة أخرى لاحقًا",
+      "contactSupportIfPersists": "الاتصال بالدعم إذا استمرت المشكلة",
+      "goBack": "العودة",
+      "tryThe": "جرب ما يلي:"
+    }
   }
 } 
