Update favicon link in index.html, adjust package-lock.json for dev dependencies, and enhance form validation in ContactForm.vue. Refactor styles in style.css for RTL support, and update project and service images in respective stores. Improve localization in i18n files and refine various component backgrounds for better consistency.

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -341,6 +341,69 @@
       "messageRequired": "الرجاء إدخال رسالة (10 أحرف على الأقل)",
       "messageTooLong": "الرسالة طويلة جدًا (500 حرف كحد أقصى)",
       "privacyRequired": "الرجاء الموافقة على سياسة الخصوصية"
+    },
+    "nameDescription": "أدخل اسمك الكامل كما هو موضح في المستندات الرسمية",
+    "emailDescription": "سنستخدم هذا البريد الإلكتروني للرد على استفسارك",
+    "subjectDescription": "ملخص موجز لاستفسارك",
+    "phoneDescription": "اختياري. يرجى تضمين رمز الدولة للأرقام الدولية",
+    "messageDescription": "يرجى تقديم أكبر قدر ممكن من التفاصيل حول استفسارك (10 أحرف على الأقل، 500 كحد أقصى)",
+    "privacyDescription": "مطلوب لمعالجة طلبك",
+    "inquiryTypeDescription": "اختر الفئة التي تناسب استفسارك",
+    "modalDescription": "هل لديك أسئلة أو تحتاج إلى مساعدة؟ أرسل لنا رسالة وسنرد عليك قريبًا.",
+    "termsFormDescription": "هل لديك أسئلة حول شروط الخدمة؟ أرسل لنا رسالة وسنرد عليك.",
+    "privacyFormDescription": "هل لديك أسئلة حول سياسة الخصوصية؟ أرسل لنا رسالة وسنرد عليك.",
+    "faqTitle": "الأسئلة الشائعة",
+    "faqSubtitle": "اعثر على إجابات للأسئلة الشائعة حول خدماتنا ودعمنا.",
+    "faqs": {
+      "response": {
+        "question": "كم يستغرق الرد على الاستفسار؟",
+        "answer": "نهدف إلى الرد على جميع الاستفسارات خلال 24-48 ساعة عمل. للمسائل العاجلة، نوصي بالاتصال بخط الدعم لدينا للمساعدة الفورية."
+      },
+      "services": {
+        "question": "ما هي الخدمات التي تقدمونها؟",
+        "answer": "نقدم مجموعة شاملة من خدمات إدارة المشاريع بما في ذلك الجدولة، إدارة التكاليف، التحكم في المستندات والمزيد. قم بزيارة صفحة <a href='/services' class='text-primary hover:underline'>الخدمات</a> لمزيد من التفاصيل."
+      },
+      "support": {
+        "question": "كيف يمكنني الحصول على الدعم الفني؟",
+        "answer": "الدعم الفني متاح عبر قنوات متعددة: هذا النموذج (اختر 'الدعم' كنوع الاستفسار)، أو عبر البريد الإلكتروني support@leap-pm.com، أو عبر الهاتف خلال ساعات العمل."
+      },
+      "appointments": {
+        "question": "هل يمكنني جدولة استشارة؟",
+        "answer": "نعم! نقدم استشارات حضورية وافتراضية. يرجى تحديد تفضيلك في رسالتك وسنرتب موعدًا مناسبًا لك."
+      },
+      "international": {
+        "question": "هل تقدمون خدمات دولية؟",
+        "answer": "نخدم بشكل أساسي العملاء في الشرق الأوسط، مع التركيز على السعودية والإمارات وقطر والكويت. لمشاريع في مناطق أخرى، يرجى التواصل معنا لمناقشة الإمكانيات."
+      }
+    },
+    "admin": {
+      "title": "إدارة التواصل",
+      "subtitle": "عرض وإدارة جميع رسائل التواصل.",
+      "inquiries": "الاستفسارات",
+      "all": "الكل",
+      "status": "الحالة",
+      "statusNew": "جديد",
+      "statusRead": "مقروء",
+      "statusResponded": "تم الرد",
+      "resetFilters": "إعادة تعيين الفلاتر",
+      "refresh": "تحديث",
+      "loading": "جاري تحميل الرسائل...",
+      "search": "بحث في الرسائل",
+      "errorTitle": "خطأ في تحميل البيانات",
+      "tryAgain": "حاول مرة أخرى",
+      "noSubmissions": "لا توجد رسائل",
+      "noSubmissionsDesc": "لا توجد رسائل تواصل مطابقة للفلاتر أو لم يتم إرسال أي رسائل بعد.",
+      "goToContact": "الانتقال إلى نموذج التواصل",
+      "allInquiries": "كل الاستفسارات",
+      "new": "جديد",
+      "read": "مقروء",
+      "responded": "تم الرد",
+      "markAsRead": "تعيين كمقروء",
+      "markAsResponded": "تعيين كمُجاب",
+      "reply": "الرد عبر البريد الإلكتروني",
+      "delete": "حذف",
+      "confirmDelete": "حذف الرسالة؟",
+      "deleteWarning": "لا يمكن التراجع عن هذا الإجراء. سيؤدي ذلك إلى حذف الرسالة نهائيًا."
     }
   },
   "projects": {
