Refine mission and values content in localization files and update HomePage.vue to display integrity content correctly.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -174,10 +174,10 @@
       "values": "Values"
     },
     "companyContent": "LEAP PM is a leading project management firm specializing in delivering comprehensive solutions across various industries. Our expert team brings decades of combined experience to every project.",
-    "missionContent": "Our mission is to empower organizations to achieve project excellence through innovative solutions, expert guidance, and unwavering commitment to quality and client satisfaction.",
+    "missionContent": "Our mission is to provide unique, value-driven project management solutions and professional training services that contribute to the advancement of the project management community.",
     "values": {
       "integrity": "Integrity",
-      "integrityContent": "Integrity in all our business dealings",
+      "integrityContent": "To be a leading firm recognized for delivering innovative and high-impact project management services and professional training",
       "excellence": "Excellence",
       "excellenceContent": "Commitment to excellence in every project",
       "innovation": "Innovation",
